master

1.0.18
- Fix "Hide Show Post Form" doing opposite of what it said it did.

1.0.17
- Mayhem
  Fix next/previous page keybinds.
- noface
  Improved checking for own post directly after posting. This should sort out a number of small hiccups.
  Fixed crossquotes not showing the correct archiver.
  Added support for posting with QR and tags on /f/.
  Added redirection for /c/ and /po/.
  Added keybinds for math and eqn tags on /sci/.
  Added full image redirection to /mu/.
  Removed ArchiveLink redirection from /soc/ (URLs will still be redirected).
  Quick tags won't be inserted where not possible anymore (like spoilers on /g/).
  Added support for coloured IDs and post highlighting from the native 4chan extension.
  Improved Linkifier to be much lighter.
  Embedding:
    - Adds support for SoundCloud, Vocaroo, mp3/ogg/wav files.
    - Adds a menu button 'Embed all in post'.
- Zixaphir
  Settings editor now applies changes on setting change
    (when you unfocus the text input on text inputs)
  Selecting a mascot or theme now changes the current mascot to that mascot
    Likewise, deselecting the current mascot sets a random mascot from enabled (or none if none are)
  Theme Editor color selector now supports click and drag (as changes are reflected in real-time, this can be slow)
  "white" shadows have been removed from all themes
  Browse button has been removed from the post form
    Clicking the file input does the same thing.
  Extended embedder to allow ease of adding new types of embeds
  Theme editor now appends " [modded]" to included themes when you edit them
    If you remove it and save the theme, it will not be added if you edit it again.
  Default font is now "sans-serif", which uses the browser's configurable "sans-serif" font.
  Updated settings menu aesthetics
  - Mascot menu redone
  - Tabs stylings now reflect the active tab
  - Single-column layout as opposed to suboption "blocks"